modified pom.xml for tests